# stream_telegram_bot

./: .coveragerc  .dockerignore  .env.tempalte  .gitignore  LICENSE  README.md  docker-compose.yaml  dockerfile  makefile  pyproject.toml  pytest.ini  ruff-format.toml  ruff.toml
.github/workflows/: main.yml
scr/: constants.py  main.py  parser.py  telegram_bot.py  types.py  utils.py
scr/apps/: parser_client.py  redis_storage.py  telegram_client.py
scr/celery/: app.py  atask.py  celeryconfig.py  tasks.py
scr/core/: settings.py
scr/internal/: tasks.py
tests/: conftest.py  constants.py  pytest.env
tests/apps/: test_parser_client.py  test_telegram_client.py
tests/apps/cassettes/: test_parser_client.yaml  test_telegram_client.yaml
tests/celery/: test_atask.py  test_celeryconfig.py  test_tasks.py
tests/fixtures/: __init__.py  app.py  celery.py  pages.py  redis.py  vcr_config.py
tests/internal/: test_tasks.py
