[tool.poetry]
name = "stream-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Sustavov Maksim <sustavovm@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^21.10"
python-dotenv = "^1.0.1"
ruff = "^0.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
